--- a/.editorconfig
+++ b/.editorconfig
@@ -43,44 +43,48 @@ indent_size = 2
 ## Language conventions
 # Dotnet code style settings:
 [*.{cs,vb}]
+# Rule format
+dotnet_diagnostic.IDE0005.severity = error
+
 # "This." and "Me." qualifiers
-dotnet_style_qualification_for_field = false:suggestion
-dotnet_style_qualification_for_property = false:suggestion
-dotnet_style_qualification_for_method = false:suggestion
-dotnet_style_qualification_for_event = false:suggestion
+dotnet_style_qualification_for_field = false:error
+dotnet_style_qualification_for_property = false:error
+dotnet_style_qualification_for_method = false:error
+dotnet_style_qualification_for_event = false:error
 
 # Language keywords instead of framework type names for type references
-dotnet_style_predefined_type_for_locals_parameters_members = true:suggestion
-dotnet_style_predefined_type_for_member_access = true:suggestion
+dotnet_style_predefined_type_for_locals_parameters_members = true:error
+dotnet_style_predefined_type_for_member_access = true:error
 
 # Modifier preferences
-dotnet_style_require_accessibility_modifiers = always:suggestion
-dotnet_style_readonly_field = true:warning
+dotnet_style_require_accessibility_modifiers = always:error
+dotnet_style_readonly_field = true:error
 
 # Parentheses preferences
-dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:error
+dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:error
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:error
+dotnet_style_parentheses_in_other_operators = never_if_unnecessary:error
 
 # Expression-level preferences
-dotnet_style_object_initializer = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
-dotnet_style_explicit_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_prefer_auto_properties = true:silent
+dotnet_style_object_initializer = true:error
+dotnet_style_collection_initializer = true:error
+dotnet_style_explicit_tuple_names = true:error
+dotnet_style_prefer_inferred_tuple_names = true:error
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:error
+dotnet_style_prefer_auto_properties = true:error
 dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
 dotnet_style_prefer_conditional_expression_over_return = true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:error
 
 # Null-checking preferences
-dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_null_propagation = true:suggestion
+dotnet_style_coalesce_expression = true:error
+dotnet_style_null_propagation = true:error
 
 # CSharp code style settings:
 [*.cs]
 # Modifier preferences
-csharp_preferred_modifier_order = public,private,protected,internal,const,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
+csharp_preferred_modifier_order = public,private,protected,internal,const,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:error
 
 # Implicit and explicit types
 csharp_style_var_for_built_in_types = true:suggestion
@@ -91,29 +95,29 @@ csharp_style_var_elsewhere = true:suggestion
 # Explicitly disabled due to difference in coding style between source and tests
 #csharp_style_expression_bodied_methods = false:silent
 #csharp_style_expression_bodied_constructors = false:silent
-csharp_style_expression_bodied_operators = false:silent
-csharp_style_expression_bodied_properties = true:suggestion
-csharp_style_expression_bodied_indexers = true:suggestion
-csharp_style_expression_bodied_accessors = true:suggestion
+csharp_style_expression_bodied_operators = when_on_single_line:suggestion
+csharp_style_expression_bodied_properties = when_on_single_line:suggestion
+csharp_style_expression_bodied_indexers = when_on_single_line:suggestion
+csharp_style_expression_bodied_accessors = when_on_single_line:suggestion
 
 # Pattern matching
-csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
-csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
+csharp_style_pattern_matching_over_is_with_cast_check = true:error
+csharp_style_pattern_matching_over_as_with_null_check = true:error
 
 # Inlined variable declarations
-csharp_style_inlined_variable_declaration = true:suggestion
+csharp_style_inlined_variable_declaration = true:error
 
 # Expression-level preferences
-csharp_prefer_simple_default_expression = true:suggestion
-csharp_style_deconstructed_variable_declaration = true:suggestion
-csharp_style_pattern_local_over_anonymous_function = true:suggestion
+csharp_prefer_simple_default_expression = true:error
+csharp_style_deconstructed_variable_declaration = true:error
+csharp_style_pattern_local_over_anonymous_function = true:error
 
 # Null-checking preference
-csharp_style_throw_expression = true:suggestion
-csharp_style_conditional_delegate_call = true:suggestion
+csharp_style_throw_expression = true:none
+csharp_style_conditional_delegate_call = true:error
 
 # Code block preferences
-csharp_prefer_braces = true:suggestion
+csharp_prefer_braces = true:error
 
 ## Formatting conventions
 # Dotnet formatting settings:
@@ -166,7 +170,7 @@ csharp_space_between_method_declaration_name_and_open_parenthesis = false
 csharp_space_between_square_brackets = false
 
 # Wrap options
-csharp_preserve_single_line_statements = true
+csharp_preserve_single_line_statements = false
 csharp_preserve_single_line_blocks = true
 
 ## Naming conventions
@@ -195,15 +199,15 @@ dotnet_naming_symbols.interface_symbol.applicable_kinds = interface
 dotnet_naming_symbols.interface_symbol.applicable_accessibilities = *
 dotnet_naming_rule.interface_naming.symbols = interface_symbol
 dotnet_naming_rule.interface_naming.style = interface_style
-dotnet_naming_rule.interface_naming.severity = suggestion
+dotnet_naming_rule.interface_naming.severity = error
 
 # Classes, Structs, Enums, Properties, Methods, Local Functions, Events, Namespaces
-dotnet_naming_symbols.class_symbol.applicable_kinds = class, struct, enum, property, method, local_function, event, namespace
+dotnet_naming_symbols.class_symbol.applicable_kinds = class, struct, enum, property, method, local_function, event, namespace, delegate
 dotnet_naming_symbols.class_symbol.applicable_accessibilities = *
 
 dotnet_naming_rule.class_naming.symbols = class_symbol
 dotnet_naming_rule.class_naming.style = pascal_case_style
-dotnet_naming_rule.class_naming.severity = suggestion
+dotnet_naming_rule.class_naming.severity = error
 
 # Type Parameters
 dotnet_naming_symbols.type_parameter_symbol.applicable_kinds = type_parameter
@@ -211,46 +215,36 @@ dotnet_naming_symbols.type_parameter_symbol.applicable_accessibilities = *
 
 dotnet_naming_rule.type_parameter_naming.symbols = type_parameter_symbol
 dotnet_naming_rule.type_parameter_naming.style = type_parameter_style
-dotnet_naming_rule.type_parameter_naming.severity = suggestion
+dotnet_naming_rule.type_parameter_naming.severity = error
 
-# Private const fields
-dotnet_naming_symbols.const_field_symbol.applicable_kinds = field
-dotnet_naming_symbols.const_field_symbol.applicable_accessibilities = private
-dotnet_naming_symbols.const_field_symbol.required_modifiers = const
+# Private Fields
+dotnet_naming_symbols.private_field_symbol.applicable_kinds = field
+dotnet_naming_symbols.private_field_symbol.applicable_accessibilities = private
 
-dotnet_naming_rule.const_field_naming.symbols = const_field_symbol
-dotnet_naming_rule.const_field_naming.style = _camelCase
-dotnet_naming_rule.const_field_naming.severity = suggestion
+dotnet_naming_rule.private_field_naming.symbols = private_field_symbol
+dotnet_naming_rule.private_field_naming.style = _camelCase
+dotnet_naming_rule.private_field_naming.severity = error
 
-# Other const fields
-dotnet_naming_symbols.const_field_symbol.applicable_kinds = field
-dotnet_naming_symbols.const_field_symbol.applicable_accessibilities = *
-dotnet_naming_symbols.const_field_symbol.required_modifiers = const
-
-dotnet_naming_rule.const_field_naming.symbols = const_field_symbol
-dotnet_naming_rule.const_field_naming.style = pascal_case_style
-dotnet_naming_rule.const_field_naming.severity = suggestion
-
-# Public fields
+# Visible Fields
 dotnet_naming_symbols.public_field_symbol.applicable_kinds = field
 dotnet_naming_symbols.public_field_symbol.applicable_accessibilities = public, internal, protected, protected_internal, private_protected
 
 dotnet_naming_rule.public_field_naming.symbols = public_field_symbol
 dotnet_naming_rule.public_field_naming.style = pascal_case_style
-dotnet_naming_rule.public_field_naming.severity = suggestion
+dotnet_naming_rule.public_field_naming.severity = error
 
-# Other fields
-dotnet_naming_symbols.other_field_symbol.applicable_kinds = field
-dotnet_naming_symbols.other_field_symbol.applicable_accessibilities = *
+# Parameters
+dotnet_naming_symbols.parameter_symbol.applicable_kinds = parameter
+dotnet_naming_symbols.parameter_symbol.applicable_accessibilities = *
 
-dotnet_naming_rule.other_field_naming.symbols = other_field_symbol
-dotnet_naming_rule.other_field_naming.style = _camelCase
-dotnet_naming_rule.other_field_naming.severity = suggestion
+dotnet_naming_rule.parameter_naming.symbols = parameter_symbol
+dotnet_naming_rule.parameter_naming.style = camel_case_style
+dotnet_naming_rule.parameter_naming.severity = error
 
-# Everything Else
-dotnet_naming_symbols.everything_else.applicable_kinds = *
+# Everything Local
+dotnet_naming_symbols.everything_else.applicable_kinds = local
 dotnet_naming_symbols.everything_else.applicable_accessibilities = *
 
 dotnet_naming_rule.everything_else_naming.symbols = everything_else
 dotnet_naming_rule.everything_else_naming.style = camel_case_style
-dotnet_naming_rule.everything_else_naming.severity = suggestion
+dotnet_naming_rule.everything_else_naming.severity = error
